postgresql-common (225) UNRELEASED; urgency=medium

  * pg_ctlcluster: Fix "use systemctl instead" context.
  * pg_createcluster: In 14+, use initdb --no-instructions.

 -- Christoph Berg <myon@debian.org>  Thu, 21 Jan 2021 15:46:53 +0100

postgresql-common (224) unstable; urgency=medium

  * pg_wrapper, PgCommon: When looking for the newest version, consider the
    name of the binary (psql, postgres) asked for.
  * pg_buildext: Fix typo in the psql/virtualenv exit code handling.
  * pg_ctlcluster: Fix starting of md5-only clusters on 8.2/8.3.
  * t/025_logging.t: Sleep a bit for the log tests to make test more stable.
  * postgresqlrc.5, user_clusters.5: Mention file locations more prominently.
  * pg_upgradecluster: Deprecate operator_precedence_warning in PG14.

 -- Christoph Berg <myon@debian.org>  Thu, 14 Jan 2021 16:23:51 +0100

postgresql-common (223) unstable; urgency=medium

  * pg_ctlcluster: Refuse to start root-owned clusters with a sensible error
    message.
  * pgdg/apt.postgresql.org.sh: Add groovy, remove archived distributions.

 -- Christoph Berg <myon@debian.org>  Thu, 12 Nov 2020 12:37:57 +0100

postgresql-common (222) unstable; urgency=medium

  [ Michael Banck ]
  * pg_upgradecluster: set max_wal_senders along with wal_level in ugprade
    mode.

  [ Christoph Berg ]
  * Drop t/003_package_checks.t, psql can be linked with readline now.
    http://meetbot.debian.net/debian-ftp/2020/debian-ftp.2020-03-13-20.02.html
  * Remove PostgreSQL 13 transition Breaks, problems were testsuite-only.

 -- Christoph Berg <myon@debian.org>  Mon, 26 Oct 2020 11:46:34 +0100

postgresql-common (221) unstable; urgency=medium

  [ Christoph Berg ]
  * pg_virtualenv: Skip build-time package tests if the PG server is missing
    extension_destdir support.
  * Test-depend on debhelper for the pg_buildext tests.
  * Skip pg_buildext tests when invoked from postgresql-NN server tests.
  * dh_make_pgxs: Support running with older debhelper versions.